  20 Sep 2013; Manuel Rüger <mrueg@gentoo.org> jekyll-1.2.1.ebuild:
  Fix install.

*jekyll-1.2.0 (07 Sep 2013)

  07 Sep 2013; Manuel Rüger <mrueg@gentoo.org> +jekyll-1.2.0.ebuild,
  -jekyll-1.1.2.ebuild:
  Version bump.

*jekyll-0.11.2 (26 Aug 2012)

  26 Aug 2012; Manuel Rüger (mrueg) gentoo@rueg.eu +jekyll-0.11.2.ebuild,
  +metadata.xml:
  www-apps/jekyll: Initial ebuild