@@ -1,3 +1,4 @@
 DIST jekyll-0.11.2.gem 53248 SHA256 99eca98958b700c8956eca7396addce926e05e989d3ea9230fff76653ca1baae SHA512 67e0391e043ac5e825835a09e3099c90460d133979036d7ad9d9017befda935a42015e7e42566fbd9092beef3da5f5a0fb63dbe3d59962bd4cc240445b5f123d WHIRLPOOL 44f5ab25b627476e39d1a1ffb55a21ba2553b80c7ddb066c5b4cadd46d39cbed36202100efb0a131f04ad86ab77372a88909669db2cba1b8fa3650f385e6c131
 DIST jekyll-1.2.1.gem 253952 SHA256 8bf9c6a56256abc189c5eddac79bd36a465d75b3ab7213871204278b2a2ebc57 SHA512 3a24614f5c4e488581de0beff1f8d019aed09310daba05ff5a1fa342abc8311e186a34037af25426213532a713872efb6fbed9c425e946dbf232a2f73ea84364 WHIRLPOOL 4c94ffb73bf2391e3873ffaf1657d4182aaeedd4438e33f3f0a263ff2193099acec8c065f705cadb1139cbaf9c1d949dbeec0096f14e57366ede48dd323993e6
 DIST jekyll-1.3.1.gem 262144 SHA256 d056dc534baf3b865fc98552e038cf841c00571a4604d6bf417650616d8dc886 SHA512 c1a8437cc9cb1b6739a4532531014ad812bda3a7e3b015f82d8d927c3d7f92814a3421541f6899d10b794ad95a09d282cd6ecb138121bef9b5532b5d023005ad WHIRLPOOL 41688199469b92e3a57ba3bc15714c01fa6e7adfc523b8e2de8ebd2f198fd3f391574d3a0d60ef073f09cb1035a5cda0378d5a932de9be8174cef212e87fb009
+DIST jekyll-1.4.1.gem 263680 SHA256 0f9d876c6305ada7bb5a52a3cc9bed26c3b1a34aa2b1a6e07a320cae7b0d43b7 SHA512 b86b2a5104ee0b10a701e952349be2df88f89909beab46e51fc3adaa77e1061f9310f6468cc461893071832887a94a99946fa7dd5e75a5ae266762b1e1c7dfaa WHIRLPOOL fbd1bb1a7a584a916c9cbe4eb64ade7baa92120464300f6ca0c1ad5509f5d6df968d8e1f560db3a9ecaf65a29f3d4a1b9e92381c88712b7f8fc72d1eaae0acd3
