@@ -1,9 +1,9 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-EAPI=4
-USE_RUBY="ruby18 ruby19"
+EAPI=5
+USE_RUBY="ruby19"
 
 inherit ruby-fakegem
 
