@@ -1,3 +1,9 @@
+*jekyll-1.4.1 (13 Dec 2013)
+
+  13 Dec 2013; Manuel Rüger <mrueg@gentoo.org> +jekyll-1.4.1.ebuild,
+  jekyll-0.11.2.ebuild:
+  Version bump.
+
   20 Sep 2013; Manuel Rüger <mrueg@gentoo.org> jekyll-1.2.1.ebuild:
   Fix install.
 
